Add author 'Jay Prakash Kumar' and MIT License to all files

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,7 @@
+# Author: Jay Prakash Kumar
+# Copyright (c) 2025
+# Licensed under MIT License
+
 # Invoice Billing System Configuration
 # Application Settings
 
@@ -32,3 +36,4 @@ datetime.format=yyyy-MM-dd HH:mm:ss
 # Performance
 connection.pool.size=10
 query.timeout.seconds=30
+
